--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,14 @@ matplotlib==3.9.2
 networkx==3.2.1
 numpy==2.0.2
 packaging==24.1
+pandas==2.2.3
 pillow==11.0.0
 plotly==5.24.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
+pytz==2024.2
+seaborn==0.13.2
 six==1.16.0
 tenacity==9.0.0
+tzdata==2024.2
 zipp==3.20.2
